@@ -65,6 +65,7 @@ Additions:
    * Add elm_object_domain_part_text_translatable_set(), elm_object_item_domain_part_text_translatable_set().
    * Support language,changed callback (Fileselector_Button, Fileselector Entry, Spinner.
    * Add the config elm_scroll_smooth_start_enable.
+   * Add elm_layout smart callback - "language,changed".
 
 Improvements:
 
